tests/NormalTests/paczka1/fuzzy1/43571926.err
Error in line 5: 3itnbuXSfnV A251 41,1
Error in line 20: jDUDTI S684 58,2
Error in line 24: S7,8 S,84 55,1
Error in line 19: 3itnbuXSfnV S359 36,9
Error in line 37: 0Vh6 A251 139,0
